# ROS-Mobile

./: .gitattributes  .gitignore  README.md
Maps/: frames_2026-01-29_20.45.58.gv  plain_map.pgm  plain_map.yaml
Planning/MultiRobot_ws/src/multi_robot_launcher/: package.xml  setup.cfg  setup.py
Planning/Navigation/src/nav_example/: CMakeLists.txt  package.xml
Planning/Navigation/src/nav_example/include/nav_example/: simple_nav_node.hpp
Planning/Navigation/src/nav_example/src/: simple_nav_node.cpp
Planning/Navigation/src/turtlebot3_gazebo/launch/: turtlebot3_world_test.launch.py
Planning/Navigation/src/turtlebot3_gazebo/worlds/: world_test.world
Planning/Navigation/world/: world_test.world
Planning/Navigation/world/floor_test/: model.config  model.sdf
Planning/Navigation/world/floor_test/floor_test/: model.sdf
Planning/Planning Sim/model/four_wheel/: model.config  model.sdf
Planning/Planning Sim/model/model/: model.sdf
Planning/Planning Sim/world/: world
Planning/Robotics SWE/catkin_ws/src/simple_arm/: CMakeLists.txt
Planning/Robotics SWE/model/building/: model.sdf
Planning/Robotics-SWE/catkin_ws/src/chase_package/: CMakeLists.txt  package.xml
Planning/Robotics-SWE/catkin_ws/src/simple_arm/: package.xml
Planning/Robotics-SWE/script/: hello.cpp
Planning/Slam_ws/src/my_slam_core/: CMakeLists.txt  package.xml
Planning/Slam_ws/src/my_slam_core/include/: slam_node.hpp
Planning/Slam_ws/src/my_slam_core/src/: slam_node.cpp
Planning/Task Planning/custom/src/robot_plansys/: CMakeLists.txt
Planning/Task Planning/custom/src/robot_plansys/config/: plansys2_params.yaml  robot.rviz
Planning/Task Planning/custom/src/robot_plansys/launch/: view_robot.launch.py
Planning/Task Planning/custom/src/robot_plansys/maps/: logistics_map.yaml
Planning/Task Planning/custom/src/robot_plansys/pddl/: domain.pddl
Planning/Task Planning/custom/src/robot_plansys/src/: move_action.cpp  pick_action.cpp  robot_controller.cpp
Planning/Task Planning/plansys_tb3_ws/: README.md
Planning/Task Planning/plansys_tb3_ws/src/tb3_actions/: CMakeLists.txt
Planning/Task Planning/plansys_tb3_ws/src/tb3_bringup/: package.xml
Planning/Task Planning/plansys_tb3_ws/src/tb3_planning/: package.xml
Planning/Task Planning/plansys_tb3_ws_patrol/src/tb3_actions/: CMakeLists.txt  package.xml
Planning/Task Planning/plansys_tb3_ws_patrol/src/tb3_actions/src/: inspect_action.cpp  move_action.cpp  report_action.cpp
Planning/Task Planning/plansys_tb3_ws_patrol/src/tb3_bringup/: CMakeLists.txt  package.xml
Planning/Task Planning/plansys_tb3_ws_patrol/src/tb3_bringup/launch/: tb3_plansys2.launch.py
Planning/Task Planning/plansys_tb3_ws_patrol/src/tb3_bringup/src/: planner_client.cpp
Planning/Task Planning/plansys_tb3_ws_patrol/src/tb3_planning/: CMakeLists.txt  package.xml
Planning/Task Planning/plansys_tb3_ws_patrol/src/tb3_planning/config/: planner_config.yaml
Planning/Task Planning/plansys_tb3_ws_patrol/src/tb3_planning/pddl/: tb3_domain.pddl  tb3_problem.pddl
Planning/Task Planning/src/robot_plansys/: package.xml
Planning/Task Planning/src/robot_plansys/include/robot_plansys/: move_action.hpp  pick_action.hpp  place_action.hpp
Planning/Task Planning/src/robot_plansys/launch/: robot_plansys.launch.py
Planning/Task Planning/src/robot_plansys/maps/: logistics_map.pgm
Planning/Task Planning/src/robot_plansys/pddl/: problem.pddl
Planning/Task Planning/src/robot_plansys/src/: place_action.cpp
Planning/Task Planning/src/robot_plansys/urdf/: logistics_robot.urdf
Planning/Task Planning/src/robot_plansys/worlds/: logistics_world.sdf
Planning/Workspaces/bumperbot_ws/src/bumpberbot_localization/: CMakeLists.txt  package.xml
Planning/Workspaces/bumperbot_ws/src/bumperbot_bringup/: CMakeLists.txt  package.xml
Planning/Workspaces/bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml
Planning/Workspaces/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
Planning/Workspaces/bumperbot_ws/src/bumperbot_cpp_examples/include/bumperbot_cpp_examples/: simple_tf_kinematics.hpp  turtlesim_kinematics.hpp
Planning/Workspaces/bumperbot_ws/src/bumperbot_cpp_examples/launch/: map_server.launch.py  map_server_launch.py
Planning/Workspaces/bumperbot_ws/src/bumperbot_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_lifecycle_node.cpp  simple_parameter.cpp  simple_publisher.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp  simple_tf_kinematics.cpp  turtlesim_kinematics.cpp
Planning/Workspaces/bumperbot_ws/src/bumperbot_description/: CMakeLists.txt  package.xml
Planning/Workspaces/bumperbot_ws/src/bumperbot_localization/: CMakeLists.txt  package.xml
Planning/Workspaces/bumperbot_ws/src/bumperbot_msgs/: CMakeLists.txt  package.xml
Planning/Workspaces/bumperbot_ws/src/bumperbot_utils/: CMakeLists.txt  package.xml
Planning/Workspaces/bumperbot_ws/src/bumperbot_utils/include/bumperbot_utils/: path_tracker.hpp
Planning/Workspaces/bumperbot_ws/src/bumperbot_utils/src/: path_tracker.cpp  safety_stop.cpp
Planning/Workspaces/bumperbot_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Planning/Workspaces/bumperbot_ws/src/log/: latest_build
SLAM/Slam_ws/src/odometry_core/: CMakeLists.txt  package.xml
SLAM/Slam_ws/src/slam_core/: package.xml
SLAM/Slam_ws/src/slam_core/src/: slam_core.cpp
Workspaces/lab/: Dockerfile.jazzy  docker-compose.jazzy.yml
Workspaces/lab/ws/: CMakeLists.txt  package.xml
Workspaces/noetic/src/pub_sub/: CMakeLists.txt  package.xml
Workspaces/test_package/: CMakeLists.txt  package.xml
Workspaces/test_package/install/: local_setup.sh  setup.sh
Workspaces/test_package/launch/: rpm_node.launch.py  rpm_node_launch.py
Workspaces/test_package/log/: latest_build  latest_test
Workspaces/test_package/src/: action_client.cpp  action_server.cpp  publisher.cpp  rpm_pub.cpp  rpm_sub.cpp  service_client.cpp  service_server.cpp  speed_calc.cpp  subscriber.cpp  turn_camera_client.cpp  turn_camera_service.cpp
(+135 files in other folders)
