<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_plansys</name>
  <version>1.0.0</version>
  <description>ROS2 PlanSys2 robot logistics demo with PDDL planning</description>
  <maintainer email="robot@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_msgs</depend>

  <exec_depend>plansys2_bringup</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
