<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_bringup</name>
  <version>0.1.0</version>
  <description>TurtleBot3 PlanSys2 bringup launch files</description>
  <maintainer email="hanielulises2003@gmail.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_msgs</depend>
  <exec_depend>tb3_planning</exec_depend>
  <exec_depend>tb3_actions</exec_depend>
  <exec_depend>plansys2_bringup</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
