<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_planning</name>
  <version>0.1.0</version>
  <description>TurtleBot3 PlanSys2 planning domain and problem files</description>
  <maintainer email="hanielulises2003@gmail.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>plansys2_msgs</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_bringup</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
